R1.4.0    Mar 31, 2020      Kukhee Kim (khkim)
          - forace tag
          - improve workaround for the missing thread join in old epics base: using epics event signal

R1.4.0    Mar 30, 2020      Kukhee Kim (khkim)
          - forace tag
          - backward compatibility issue for the graceful shutdown
            epics 3.15 doesn't support joinable thread and new API epicsThreadCreateOpt
            put an workaround for the old epics base

R1.4.0    Mar 28, 2020      Kukhee Kim (khkim)
          * implement a graceful shutdown to avoid core dump during exit process

R1.3.0    Mar 4, 2020       Kukhee Kim (khkim)
          * force tag R1.3.0
          * upgrade new modifier bits for CLTS

R1.3.0    Jan 29, 2019      Kukhee Kim (khkim)
          * build with yamlLoader R2.1.0, cpsw/framework R4.4.1, hpsTpr R1.1.0 and buildroot-2019.08

R1.2.0    Nov 22, 2019      Kukhee Kim (khkim)
          * bulid with yamlLoader R2.0.0
          * implement named_root to support multiple blades in a single ioc

R1.1.6    Nov 18, 2019      Kukhee Kim (khkim)
          * build with asyn R4.32-1.0.0

R1.1.5    Oct 28, 2019      Kukhee Kim (khkim)
          * build with cpsw/framework R4.3.1  timing/hpsTpr R1.0.5 and yamlLoader R1.1.5

R1.1.4    Sep 20, 2019      Kukhee Kim (khkim)
          * build with cpsw/framework R4.2.0, timing/hpsTpr R1.0.4 and yamlLoader R1.1.4

R1.1.3    Jun 24, 2019      Kukhee Kim (KHKIM)
          * build with cpsw/framework R4.1.2 and yamlLoader R1.1.3

R1.1.2    Nov 8, 2018       Kukhee Kim (KHKIM)
          * build with yamlLoader     R1.1.2
          * build with yaml-cpp-0.5.3_boost-1.64.0
          * build with boost 1.64.0

R1.1.1    Sep 18, 2018      Kukhee Kim (KHKIM)
          * build with yamlLoader     R1.1.1
          * build with hpsTpr         R1.0.2
          * build with cpsw/framework R3.6.6
          * add evrTimePutPulseID in evrTime.h and its implementation

R1.1.0    July 3, 2018      Kukhee Kim (KHKIM)